--- a/README
+++ b/README
@@ -26,3 +26,14 @@ Fullcalendar http://arshaw.com/fullcalendar 2.0.0beta MIT
 Moment http://momentjs.com/ 2.5.1 MIT
 Justified Gallery https://github.com/miromannino/Justified-Gallery 2.1 Creative Commons 3.0
 Morris Charts http://www.oesmith.co.uk/morris.js/ v0.4.3 MIT
+
+
+
+Website Created for Southern Polytechnic State University SWE3613 Software System Engineering Class. Assignment Project 2
+
+Team:
+Clint Walker
+Erik Storla
+Daniel Park
+Michael Adeyosoye
+Albert John
